--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,13 +8,17 @@
     </div>
 
     <div>
-
         <%= form.label :body %><br>
         <%= form.text_field :body %>
         <%= article.errors.full_messages_for(:body).each do |message| %>
             <div> <%= message %> </div>
         <% end %>
     </div>
+
+  <div>
+        <%= form.label :status %><br>
+        <%= form.select :status, ['public', 'private', "archived"], selected: 'public' %>
+ </div>
 
     <div>
         <%= form.submit %><br>
