--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,6 +11,6 @@
 <p>
  <%= link_to "Destroy Comment", [comment.article, comment],
                     method: :delete,
-                    data: {confirm: "Are you suure?" } %>
+                    data: {confirm: "Are you sure?" } %>
 
 </p>
